# crewai_agents

./: .env.example  .gitignore  README.md  crew.py  env_example.txt  pyproject.toml  requirements.txt  test_linkup.py
agents/: content_creator_agent.py  research_agent.py
tasks/: content_creation_task.py  research_task.py  topic_discovery_task.py
tools/: linkup_tool.py
