[project]
name = "crewai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.28.8",
    "crewai-tools>=0.1.6",
    "linkup-sdk>=0.2.8",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
